Name: HBEAM
Version: 0.0
Description: Haskell virtual machine for Erlang's BEAM bytecode
License: GPL
License-file: COPYING
Author: Mikael Brockman
Maintainer: phubuh@gmail.com
Build-Type: Simple
Cabal-Version: >=1.2

Executable hbeam
  hs-source-dirs: src
  Main-is: Main.hs
  Build-Depends: base >= 3 && < 5, binary, bytestring, text, monad-loops,
                 zlib, array, containers, transformers
  ghc-options: -Wall
